# community-sync

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: oss_metrics.yml
src/community_sync/: __init__.py  cli.py
tests/: test_cli.py
